Added Scala ebook to the markup

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 			<li value='IA|MongoDB in Action' class="bookItem" />
 			<li value='IA|NodeJS in Action' class="bookItem" />
 			<li value='IA|React in Action' class="bookItem" />
+			<li value='IA|Scala in Action' class="bookItem" />
 			<li value='IA|SonarQube in Action' class="bookItem" />
 			<li value='IA|Spring Boot in Action' class="bookItem" />
 			<li value='IA|Spring Dynamic Modules in Action' class="bookItem" />
