Added hyperlink for the Tomcat

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 			<li value='OR|Regular Expression Pocket Reference, 2nd Edition' class="bookItem" />
 			<li value='OR|RESTful Web Services' class="bookItem" />
 			<li value='OR|Spring Data' class="bookItem" />
+			<li value='OR|Tomcat The Definitive Guide, 2nd Edition' class="bookItem" />
 			<li value='OR|XML Pocket Reference, 3rd Edition' class="bookItem" />
 		</ul>
 	</details>
