Added link for AJAX

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 		<summary>In Action - Book Series</summary>
 		<ul>
 			<li value='IA|ActiveMQ in Action' class="bookItem" />
+			<li value='IA|Ajax in Action' class="bookItem" />
 			<li value='IA|Android in Action, 3rd Edition' class="bookItem" />
 			<li value='IA|AngularJS in Action' class="bookItem" />
 			<li value='IA|Ant in Action - 2nd Edition' class="bookItem" />
