Added book and link for the Guava handbook

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
 	<details>
 		<summary>Other Book Series</summary>
 		<ul>
+			<li value="Getting Started with Google Guava" class="bookItem" />
 			<li value='OT|Java Collections - Software Engineering' class="bookItem" />
 			<li value='OT|Java Collections Framework' class="bookItem" />
 			<li value='OT|Learning VueJS' class="bookItem" />
