--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 			<li value='IA|JUnit in Action - 1st Edition' class="bookItem" />
 			<li value='IA|JUnit in Action - 2nd Edition' class="bookItem" />
 			<li value='IA|Kotlin in Action' class="bookItem" />
+			<li value='IA|Machine Learning in Action in Action' class="bookItem" />
 			<li value='IA|Modern Java in Action' class="bookItem" />
 			<li value='IA|MongoDB in Action' class="bookItem" />
 			<li value='IA|NodeJS in Action' class="bookItem" />
