Added hyperlink for Groovy

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 			<li value='IA|EJB 3 in Action - 2nd Edition' class="bookItem" />
 			<li value='IA|Ext JS in Action - 2nd Edition' class="bookItem" />
 			<li value='IA|Go in Action' class="bookItem" />
+			<li value='IA|Groovy in Action - 2nd Edition' class="bookItem" />
 			<li value='IA|Hibernate in Action' class="bookItem" />
 			<li value='IA|HTML5 in Action' class="bookItem" />
 			<li value='IA|Java 8 in Action' class="bookItem" />
