Added hyperlink for JQuery

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 			<li value='IA|HTML5 in Action' class="bookItem" />
 			<li value='IA|Java 8 in Action' class="bookItem" />
 			<li value='IA|JavaServer Faces in Action' class="bookItem" />
+			<li value='IA|JQuery in Action' class="bookItem" />
 			<li value='IA|JSTL in Action' class="bookItem" />
 			<li value='IA|JUnit in Action - 1st Edition' class="bookItem" />
 			<li value='IA|JUnit in Action - 2nd Edition' class="bookItem" />
