Added hyperlink for R language

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 			<li value='IA|Modern Java in Action' class="bookItem" />
 			<li value='IA|MongoDB in Action' class="bookItem" />
 			<li value='IA|NodeJS in Action' class="bookItem" />
+			<li value='IA|R in Action' class="bookItem" />
 			<li value='IA|React in Action' class="bookItem" />
 			<li value='IA|Redis in Action' class="bookItem" />
 			<li value='IA|Scala in Action' class="bookItem" />
