--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 			<li value='IA|Struts 1 in Action' class="bookItem" />
 			<li value='IA|Struts 2 in Action' class="bookItem" />
 			<li value='IA|Wicket in Action' class="bookItem" />
+			<li value='IA|Windows PowerShell in Action - 3rd Edition' class="bookItem" />
 		</ul>
 	</details>
 
