Added hyperlink for iText

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 			<li value='IA|Groovy in Action - 2nd Edition' class="bookItem" />
 			<li value='IA|Hibernate in Action' class="bookItem" />
 			<li value='IA|HTML5 in Action' class="bookItem" />
+			<li value='IA|iText in Action - 2nd Edition' class="bookItem" />
 			<li value='IA|Java 8 in Action' class="bookItem" />
 			<li value='IA|JavaServer Faces in Action' class="bookItem" />
 			<li value='IA|JQuery in Action' class="bookItem" />
