--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 			<li value='IA|Modern Java in Action' class="bookItem" />
 			<li value='IA|MongoDB in Action' class="bookItem" />
 			<li value='IA|NodeJS in Action' class="bookItem" />
+			<li value='IA|OSGi in Action' class="bookItem" />
 			<li value='IA|R in Action' class="bookItem" />
 			<li value='IA|React in Action' class="bookItem" />
 			<li value='IA|Redis in Action' class="bookItem" />
